# spectecle

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/psomani/spectecle/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ui/: continue_reading.dart  library.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/actors/: library.rs  mod.rs
native/hub/src/signals/: library_signals.rs  mod.rs  utility_signals.rs
native/hub/src/utility/: cache.rs  library.rs  mod.rs  state.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
