[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = [
  "rt",
  "macros",
  "time",
  "sync",
  "fs",
] }
async-trait = "0.1.87"
messages = "0.3.1"
serde_json = "1.0.149"
anyhow = "1.0.101"
walkdir = "2.5.0"
epub = "2.1.5"
rbook = "0.6.10"
epub-parser = "0.3.4"
regex = "1.12.3"
image = "0.25.9"
fast_image_resize = { version = "6.0.0", features = ["image"] }
rayon = "1.11.0"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
